--- a/resources/sass/templates/_table.scss
+++ b/resources/sass/templates/_table.scss
@@ -207,6 +207,7 @@
 
 		.table-icon {
 			padding: 0.5rem;
+			display: flex;
 			width: 4rem;
 
 			img {
